test-package-compiler/tests/snapshots/compiler_tests__foldl_value_type_and_class_method_semantic.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Semantic errors (1):
  - Multiple classes in one file is not supported. Found classes: FoldValueCtr, FoldClassMethodCtr. Each class should be in its own .bt file.
