test-package-compiler/tests/snapshots/compiler_tests__future_pattern_matching_semantic.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Semantic errors (1):
  - Undefined variable: match
